clusters/pi-cluster/apps/adguard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 53
          protocol: UDP
        - containerPort: 53
          protocol: TCP
        - containerPort: 80
        - containerPort: 443
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /opt/adguardhome/conf
        - name: work
          mountPath: /opt/adguardhome/work
      volumes:
      - name: config
        hostPath:
          path: /opt/adguardhome/conf
      - name: work
        hostPath:
          path: /opt/adguardhome/work
---
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  selector:
    app: adguard
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: admin
    port: 3000
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: adguard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard
            port:
              number: 80
